--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,13 @@
 		"**/dist": true,
 		"**/lib": true
 	},
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/*.code-search": true,
+		"**/dist": true,
+		"**/lib": true
+	},
 	"editor.codeActionsOnSave": {
 		"source.organizeImports": false
 	}
