--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@types/jest": "^29.2.4",
+		"@types/node": "^20.5.0",
 		"@types/ramda": "^0.28.20",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
