--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@actions/core": "^1.2.6",
 		"@actions/exec": "^1.0.4",
 		"@actions/github": "^5.1.1",
+		"@actions/glob": "^0.4.0",
 		"@actions/io": "^1.0.2",
 		"@octokit/graphql": "^5.0.4",
 		"ramda": "^0.28.0"
