Provide default value for skip_tests input

--- a/packages/e2e-tests/action.yml
+++ b/packages/e2e-tests/action.yml
@@ -17,6 +17,7 @@ inputs:
         description: Skip tests (used for cache warm-up workflow)
         type: boolean
         required: false
+        default: false
 runs:
     using: node16
     main: dist/index.js
