--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,11 +7,10 @@
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["@typescript-eslint"],
 	"extends": [
-		"plugin:jest/recommended",
-		"plugin:@typescript-eslint/recommended",
 		"eslint:recommended",
-		"plugin:prettier/recommended",
-		"plugin:github/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"plugin:jest/recommended",
+		"plugin:prettier/recommended"
 	],
 	"globals": {
 		"Atomics": "readonly",
