--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,15 @@
 		"**/node_modules": true,
 		"**/dist": true,
 		"**/lib": true
+	},
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/*.code-search": true,
+		"**/dist": true,
+		"**/lib": true
+	},
+	"editor.codeActionsOnSave": {
+		"source.organizeImports": false
 	}
 }
