--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
 		]
 	},
 	"dependencies": {
+		"@actions/artifact": "^1.1.1",
+		"@actions/cache": "^3.2.2",
 		"@actions/core": "^1.2.6",
 		"@actions/exec": "^1.0.4",
 		"@actions/github": "^5.1.1",
+		"@actions/glob": "^0.4.0",
 		"@actions/io": "^1.0.2",
 		"@octokit/graphql": "^5.0.4",
 		"ramda": "^0.28.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^29.2.4",
+		"@types/node": "^20.5.0",
 		"@types/ramda": "^0.28.20",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
