Stop VSCode from organizing imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,6 @@
 		"**/lib": true
 	},
 	"editor.codeActionsOnSave": {
-		"source.organizeImports": false
+		"source.organizeImports": "never"
 	}
 }
