Create a root-level npm script "lint"

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"scripts": {
 		"build": "yarn workspaces run all",
+		"lint": "yarn workspaces run lint",
 		"test": "jest --watchAll",
 		"test:ci": "jest"
 	},
