--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
 		"jest": "^29.3.1",
 		"jest-circus": "^29.3.1",
 		"prettier": "^2.1.2",
+		"string-width": "^4.2",
+		"strip-ansi": "6.0.1",
 		"ts-jest": "^29.0.3",
-		"typescript": "^4.0.5"
+		"typescript": "^4.0.5",
+		"wrap-ansi": "^7"
 	}
 }
