--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
 		"prettier": "^2.1.2",
 		"ts-jest": "^29.0.3",
 		"typescript": "^4.0.5"
+	},
+	"resolutions": {
+		"strip-ansi": "6.0.1"
 	}
 }
