--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
 	"author": "Event Espresso",
 	"license": "GPL-3.0",
 	"private": true,
+	"engines": {
+		"node": ">=20"
+	},
 	"scripts": {
 		"build": "yarn workspaces run all",
+		"lint": "yarn workspaces run lint",
 		"test": "jest --watchAll",
 		"test:ci": "jest"
 	},
@@ -16,7 +20,7 @@
 		]
 	},
 	"dependencies": {
-		"@actions/artifact": "^1.1.1",
+		"@actions/artifact": "^2.1.7",
 		"@actions/cache": "^3.2.2",
 		"@actions/core": "^1.2.6",
 		"@actions/exec": "^1.0.4",
@@ -43,5 +47,8 @@
 		"prettier": "^2.1.2",
 		"ts-jest": "^29.0.3",
 		"typescript": "^4.0.5"
+	},
+	"resolutions": {
+		"strip-ansi": "6.0.1"
 	}
 }
