--- a/packages/checkout-and-yarn/action.yml
+++ b/packages/checkout-and-yarn/action.yml
@@ -25,6 +25,7 @@ runs:
 
         - name: Enable Corepack
           run: corepack enable
+          shell: bash
 
         - name: Set up Node
           uses: actions/setup-node@v3
