Enable corepack for composite action Yarn-and-checkout (#69)

--- a/packages/checkout-and-yarn/action.yml
+++ b/packages/checkout-and-yarn/action.yml
@@ -23,6 +23,10 @@ runs:
               fetch-depth: ${{ inputs.fetch-depth }}
               token: ${{ inputs.token }}
 
+        - name: Enable Corepack
+          run: corepack enable
+          shell: bash
+
         - name: Set up Node
           uses: actions/setup-node@v3
           with:
